--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
     </div>
 
     <div class="grid-4" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 40px;">
-    <a href="/tailieu/mon-toan/[NTP] Bộ 14 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
+    <a href="tailieu/mon-toan/[NTP] Bộ 14 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
      <div class="folder-card" style="--folder-color:#3b82f6; cursor:pointer;">
            <div class="folder-icon">📂</div>
            <strong style="display:block; font-size:16px; color:#0f172a;">
@@ -857,14 +857,14 @@
           </small>
         </div>
     </a>
-        <a href="/tailieu/mon-van/[NTP] Bộ 3 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
+        <a href="tailieu/mon-van/[NTP] Bộ 3 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
         <div class="folder-card" style="--folder-color: #ef4444;">
             <div class="folder-icon">📂</div>
             <strong style="display:block; font-size: 16px;">Ngữ Văn</strong>
             <small style="color: #94a3b8;">3 tài liệu • 2,101KB</small>
         </div>
     </a>
-        <a href="/tailieu/mon-anh/[NTP] Bộ 25 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
+        <a href="tailieu/mon-anh/[NTP] Bộ 25 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
         <div class="folder-card" style="--folder-color: #10b981;">
             <div class="folder-icon">📂</div>
             <strong style="display:block; font-size: 16px;">Tiếng Anh</strong>
