--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <h4>Trang chủ</h4>
 		<a class="active" href="#" onclick="showPage('truong-hoc', this)">Trường học</a>
         <a href="#" onclick="showPage('tong-quan', this)">Tổng quan</a>
-        <a href="#" onclick="showPage('hoc-sinh', this)">Quản lý học sinh</a>
         <a href="diemdanh.html">Điểm danh</a>
+        <a href="#" onclick="showPage('hoc-sinh', this)">Quản lý học sinh</a> 
 <a href="#" onclick="showPage('thoi-khoa-bieu', this)">Thời khóa biểu</a>
         
         <h4>TIỆN ÍCH</h4>
         <a href="#" onclick="showPage('thong-bao', this)">Thông Báo</a>
         <a href="#" onclick="showPage('tai-lieu', this)">Tài Liệu</a>
         <a href="#" onclick="showPage('tin-nhan', this)">Tin Nhắn</a>
-        
+        <a href="#" onclick="showPage('ai-hoc-tap', this)">Học tập cùng AI</a>
         <h4>HỆ THỐNG</h4>
         <a href="#" onclick="showPage('cai-dat', this)">Cài đặt</a>
       </div>
@@ -846,7 +846,7 @@
     </div>
 
     <div class="grid-4" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 40px;">
-    <a href="tailieu/mon-toan/[NTP] Bộ 14 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
+    <a href="/tailieu/mon-toan/[NTP] Bộ 14 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
      <div class="folder-card" style="--folder-color:#3b82f6; cursor:pointer;">
            <div class="folder-icon">📂</div>
            <strong style="display:block; font-size:16px; color:#0f172a;">
@@ -857,14 +857,14 @@
           </small>
         </div>
     </a>
-        <a href="tailieu/mon-van/[NTP] Bộ 3 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
+        <a href="/tailieu/mon-van/[NTP] Bộ 3 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
         <div class="folder-card" style="--folder-color: #ef4444;">
             <div class="folder-icon">📂</div>
             <strong style="display:block; font-size: 16px;">Ngữ Văn</strong>
             <small style="color: #94a3b8;">3 tài liệu • 2,101KB</small>
         </div>
     </a>
-        <a href="tailieu/mon-anh/[NTP] Bộ 25 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
+        <a href="/tailieu/mon-anh/[NTP] Bộ 25 đề trường sở tốt nghiệp 2026.zip" style="text-decoration:none;">
         <div class="folder-card" style="--folder-color: #10b981;">
             <div class="folder-icon">📂</div>
             <strong style="display:block; font-size: 16px;">Tiếng Anh</strong>
@@ -984,6 +984,32 @@
             </div>
         </div>
     </div>
+</section>
+<!-- ================= AI HỌC TẬP ================= -->
+
+<!-- ================= AI HỌC TẬP ================= -->
+<section id="ai-hoc-tap" class="page ai-section">
+
+  <div class="ai-hero">
+      <h2>🤖 Trợ lý học tập AI 12A1</h2>
+      <p>Hỏi bài tập • Giải chi tiết • Ôn thi THPTQG • Viết văn mẫu</p>
+  </div>
+
+  <div class="ai-card">
+      <div id="ai-chat-box" class="ai-chat-box"></div>
+
+      <div class="ai-input-row">
+          <input id="ai-input"
+              type="text"
+              placeholder="Nhập câu hỏi của bạn..."
+              onkeypress="if(event.key==='Enter') askAI()">
+
+          <button onclick="askAI()" class="ai-send-btn">
+              🚀 Gửi
+          </button>
+      </div>
+  </div>
+
 </section>
 
 <section id="cai-dat" class="page" style="width: 100%;">
